# PanoDreamer

./: .gitignore  CLAUDE.md  README.md  depth_estimation.py  ldi_generation.py  pyproject.toml  render_gsplat.py  test_projection.py  train_gsplat.py
utils/: depth_layering.py  depth_utilsv2.py
