[project]
name = "panodreamer"
version = "0.1.0"
description = "PanoDreamer: Optimization-Based Single Image to 360 3D Scene With Diffusion"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "transformers",
    "diffusers",
    "torch>=2.0,<2.10",
    "torchvision",
    "pillow",
    "tqdm",
    "accelerate",
    "kornia",
    "opencv-python",
    "matplotlib",
    "scikit-learn",
    "ropwr",
    "gsplat",
    "gdown",
    "imageio",
    "imageio-ffmpeg",
    "plyfile",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.hatch.build.targets.wheel]
packages = ["."]
